--- a/deployment/src/classes/SampleDeployClass.cls
+++ b/deployment/src/classes/SampleDeployClass.cls
@@ -8,6 +8,7 @@ public class SampleDeployClass {
         insert acc; // hit the trigger
 
         // Check that the trigger properly set the phone field:
+        // Testing for commit based triggers
         Account retAcc = [select id, phone from Account where id=:acc.id][0];
         System.assertEquals(getPhone(), retAcc.phone);
     }
